[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyeventsummary"
version = "0.0.18"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pyeventsummary is a way to aggregate and report on a host of errors and actions"
readme = "README.md"
license = "MIT"
keywords=[
    "python",
    "summary",
    "errors",
    "actions",
    "aggregate",
    "print",
    "enum",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyeventsummary"
"Bug Tracker" = "https://github.com/veltzer/pyeventsummary/issues"
"Documentation" = "https://veltzer.github.io/pyeventsummary"
"Download" = "https://pypi.org/project/pyeventsummary/"
"Repository" = "https://github.com/veltzer/pyeventsummary"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyeventsummary"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyeventsummary/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]
